# bitcoin-core-ci-stats

./: .checkpoint.json  .gitignore  Cargo.toml  LICENSE  README.md  fetch-tasks.py  fetch.py  flake.nix  graph.json  stats.json
.github/workflows/: bitcoin-bitcoin-github-actions.yml  bitcoin-bitcoin-tasks.yml  hugo.yml
src/: checkpoint.rs  constants.rs  errors.rs  github.rs  lib.rs  log_parser.rs  main.rs  models.rs  storage.rs
www/: hugo.toml
www/content/graph/: build.md  ccache-hitrate.md  execution-duration.md  functional-tests.md  schedule-duration.md  schedule-execution-duration.md  unit-tests.md
www/content/task/: _content.gotmpl
www/layouts/: 404.html  index.html
www/layouts/_default/: baseof.html  single.html  terms.html
www/layouts/graph/: list.html  single.html
www/layouts/partials/: footer.html  head.html  navigation.html  task-table-row.html  task-table.html
www/layouts/stats/: list.html
www/layouts/task/: list.html  single.html
