[package]
name = "fetch-tasks-github"
version = "0.1.0"
edition = "2024"

[dependencies]
octocrab = "0.44"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
http-body-util = "0.1"
